# udemy-web-scraping-in-python-selenium-scrapy-chatgpt-prize

./: .gitignore  README.md  pyproject.toml
002-learn-beautifulsoup/001-intro/: Titanic (1953) - full transcript.txt  main.py
002-learn-beautifulsoup/002-multipage/: Cannibal Mukbang (2023) - full transcript.txt  Dalej jazda! (2024) - full transcript.txt  Dragnet (1947) - full transcript.txt  Franco Building with Jonathan Meades (2019) - full transcript.txt  Fright (2024) - full transcript.txt  Girl on the Run (1953) - full transcript.txt  Hard Boiled Mahoney (1947) - full transcript.txt  Hearts Around the Table: Jenna's First Love (2025) - full transcript.txt  Holiday for Drumsticks (1949) - full transcript.txt  House Broken (2010) - full transcript.txt  I Kissed a Vampire (2010) - full transcript.txt  Immortality (1998) - full transcript.txt  In Fast Company (1946) - full transcript.txt  Invader (2024) - full transcript.txt  Jinx Money (1948) - full transcript.txt  Little Tornadoes (2021) - full transcript.txt  Livestream (2025) - full transcript.txt  Love from Mother Only (2003) - full transcript.txt  Odd Girl (2019) - full transcript.txt  Pluto's Playmate (1941) - full transcript.txt  Private Information (1952) - full transcript.txt  Seneca (2023) - full transcript.txt  So's Your Uncle (1943) - full transcript.txt  Tendaberry (2024) - full transcript.txt  The Kingdom (2024) - full transcript.txt  The Mandarin Mystery (1936) - full transcript.txt  The Monkey (2025) - full transcript.txt  main.py  (+3 more)
005-selenium/: football_date.csv  main.py
(+2 files in other folders)
