[tool.poetry]
name = "web-scraping-in-python"
version = "0.1.0"
description = ""
authors = ["agunggapai <agung@gapai.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.33.1"
bs4 = "^0.0.2"
lxml = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
